added dragon image and grabbed dom elements

--- a/index.html
+++ b/index.html
@@ -20,34 +20,29 @@
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="./assets/alchemy-logo.png" />
+            <img class="main-logo" src="./assets/red-dragon.png" />
             <h2>
-                Where is the Dragon's Pearl?
+                Where is the Dragon's Pearl(s)?
             </h2>
 
 				<div class="hats">
 					<div class="hat">  
-						<img src="assets/normal-hat.png" id="cup-0" />
+						<img src="assets/normal-hat.png" id="hat-0" />
 						<button id="button-0">Hat of Virtue</button>
 					</div>
 					<div class="hat">  
-						<img src="assets/normal-hat.png" id="cup-1" />
+						<img src="assets/normal-hat.png" id="hat-1" />
 						<button id="button-1">Hat of Civility</button>
 					</div>
 					<div class="hat">  
-						<img src="assets/normal-hat.png" id="cup-2" />
+						<img src="assets/normal-hat.png" id="hat-2" />
 						<button id="button-2">Hat of Wisdom</button>
 					</div>
 				</div>
 
-            <p>
-            
-            </p>
-            <hr />
-            <p>
-                
-            </p>
-
+				<div>Young Human, you have found <span id="wins">0</span> pearls
+				</div><div>out of</div>
+				<div><span id="total">0</span> searches.</div>
         </section>
     </main>
     <footer>
