fixed hatId in app js file

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 				<div class="hats">
 					<div class="hat">  
 						<img src="assets/normal-hat.png" id="hat-0" />
-						<button id="button-0">Hat of Virtue</button>
+						<button class="buttons" id="button-0">Hat of Virtue</button>
 					</div>
 					<div class="hat">  
 						<img src="assets/normal-hat.png" id="hat-1" />
-						<button id="button-1">Hat of Civility</button>
+						<button class="buttons" id="button-1">Hat of Civility</button>
 					</div>
 					<div class="hat">  
 						<img src="assets/normal-hat.png" id="hat-2" />
-						<button id="button-2">Hat of Wisdom</button>
+						<button class="buttons" id="button-2">Hat of Wisdom</button>
 					</div>
 				</div>
 
