added more image files and styling

--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
             <h2>
                 Where is the Dragon's Pearl(s)?
             </h2>
+			<p>Choose your Crown wisely.</p>
 
 				<div class="hats">
 					<div class="hat">  
-						<img src="assets/normal-hat.png" id="hat-0" />
-						<button class="buttons" id="button-0">Hat of Virtue</button>
+						<img src="assets/goldkinghat.png" id="hat-0" />
+						<button class="buttons" id="button-0">Crown of Virtue</button>
 					</div>
 					<div class="hat">  
-						<img src="assets/normal-hat.png" id="hat-1" />
-						<button class="buttons" id="button-1">Hat of Civility</button>
+						<img src="assets/goldkinghat.png" id="hat-1" />
+						<button class="buttons" id="button-1">Crown of Civility</button>
 					</div>
 					<div class="hat">  
-						<img src="assets/normal-hat.png" id="hat-2" />
-						<button class="buttons" id="button-2">Hat of Wisdom</button>
+						<img src="assets/goldkinghat.png" id="hat-2" />
+						<button class="buttons" id="button-2">Crown of Wisdom</button>
 					</div>
 				</div>
 
-				<div>Young Human, you have found <span id="wins">0</span> pearls
+				<div>Young Master, you have found <span id="wins">0</span> pearls
 				</div><div>out of</div>
 				<div><span id="total">0</span> searches.</div>
         </section>
