added more styling to the buttons,h2, and p tags in css

--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
 					</div>
 				</div>
 
-				<div>Young Master, you have found <span id="wins">0</span> pearls
-				</div><div>out of</div>
-				<div><span id="total">0</span> searches.</div>
+				<div class="tracker">
+					<div class="text">Young Master, <br>you have found <span id="wins">0</span> pearls
+				</div>
+				<div class="text">out of</div>
+				<div class="text"><span id="total">0</span> retrieval missions.</div>
+				</div>
         </section>
     </main>
     <footer>
