added correct hat image or crown to app js and changed html id to hat

--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
             <h2>
                 Where is the Dragon's Pearl(s)?
             </h2>
+			<img src="assets/dragonpearl2.png" id="pearl1"/>
 			<p>Choose your Crown wisely.</p>
 
 				<div class="hats">
 					<div class="hat">  
-						<img src="assets/goldkinghat.png" id="hat0" />
+						<img src="assets/goldkinghat.png" id="hat0-container" />
 						<button class="buttons" id="button-0">Crown of Virtue</button>
 					</div>
 					<div class="hat">  
-						<img src="assets/goldkinghat.png" id="hat1" />
+						<img src="assets/goldkinghat.png" id="hat1-container" />
 						<button class="buttons" id="button-1">Crown of Civility</button>
 					</div>
 					<div class="hat">  
-						<img src="assets/goldkinghat.png" id="hat2" />
+						<img src="assets/goldkinghat.png" id="hat2-container" />
 						<button class="buttons" id="button-2">Crown of Wisdom</button>
 					</div>
 				</div>
