added 3 functions in app js

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             <h2>
                 Where is the Dragon's Pearl(s)?
             </h2>
-			<img src="assets/dragonpearl2.png" id="pearl1"/>
-			<p>Choose your Crown wisely.</p>
+			<img class="rotate" src="assets/dragonpearl2.png" id="pearl1"/>
 
 				<div class="hats">
 					<div class="hat">  
@@ -43,7 +42,7 @@
 				</div>
 
 				<div class="tracker">
-					<div class="text">Young Master, <br>you have found <span id="wins">0</span> pearls
+					<div class="text">Sifu Madden, <br>you have found <span id="wins">0</span> pearls
 				</div>
 				<div class="text">out of</div>
 				<div class="text"><span id="total">0</span> retrieval missions.</div>
