created function to spin pearl

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>
                 Where is the Dragon's Pearl(s)?
             </h2>
-			<img class="rotate" src="assets/dragonpearl2.png" id="pearl1"/>
+			<img class="rotate" src="assets/dragonpearl2.png"/>
 
 				<div class="hats">
 					<div class="hat">  
