--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
 				<div class="hats">
 					<div class="hat">  
-						<img src="assets/goldkinghat.png" id="hat0-container" />
+						<img src="" id="hat0-container" />
 						<button class="buttons" id="button-0">Crown of Virtue</button>
 					</div>
 					<div class="hat">  
-						<img src="assets/goldkinghat.png" id="hat1-container" />
+						<img src="" id="hat1-container" />
 						<button class="buttons" id="button-1">Crown of Civility</button>
 					</div>
 					<div class="hat">  
-						<img src="assets/goldkinghat.png" id="hat2-container" />
+						<img src="" id="hat2-container" />
 						<button class="buttons" id="button-2">Crown of Wisdom</button>
 					</div>
 				</div>
